--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,9 +13,11 @@
         "serve": "vite preview"
     },
     "dependencies": {
+        "@types/node-fetch": "^2.6.1",
         "axios": "^0.25.0",
         "chalk": "4.1.0",
         "lodash": "^4.17.21",
+        "node-fetch": "^2.6.7",
         "string-similarity": "^4.0.4",
         "vue": "^3.2.31"
     },
