--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,5 +13,5 @@
         "resolveJsonModule": true
     },
 
-    "include": ["index.ts", "src/**/*.ts", "src/**/*.tsx"]
+    "include": ["./src/core/index.ts"]
 }
